--- a/css/tilt.css
+++ b/css/tilt.css
@@ -16,13 +16,14 @@ body {
   justify-content: center;
   align-content: stretch;
   align-items: center;
+  text-decoration: none !important;
 }
 
 .c-logo {
   width: 300px;
   height: 300px;
   background-color: #7e56ff;
-  background-image: linear-gradient(150deg, #5a00ff 0%, #ff1ff7 100%, #ff1ff7 100%);
+  background-image: linear-gradient(to right top, #013e41, #02464b, #034d55, #055560, #0a5d6b, #086978, #047686, #008393, #0098a4, #00aeb4, #00c4c1, #0edacd);
   box-shadow: 0 20px 27px rgba(0, 0, 0, 0.05);
   color: white;
   text-decoration: none;
