--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,7 @@ html {
     scroll-behavior: smooth;
 }
 
-/* 
+
 #loading {
    width: 100%;
    height: 100%;
@@ -21,7 +21,7 @@ html {
   top: 100px;
   left: 240px;
   z-index: 100;
-} */
+}
 
 
 .slide1 {
@@ -150,6 +150,7 @@ html {
 .inside {
     transform: rotate(-45deg);
 }
+
 
 
 .fb:hover {
